# polibacorse-os-backgrounds

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  configure.ac  fedora-workstation-backgrounds.spec  polibacorse-os-backgrounds.spec
backgrounds/: Makefile.am  fedora-workstation-backgrounds.xml.in  polibacorse-os-backgrounds.xml.in
