backgrounddir = $(datadir)/backgrounds/fedora-workstation

background_DATA = \
	fedora-printed.jpg \
  	winter-in-bohemia.png \
  	trama-calda.jpg \
  	dutch_skies.jpg \
  	calm.jpg \
  	himalayan-desert-mountains.jpg \
  	cherryblossom.jpg \
  	frog-prince.jpg \
  	zen.jpg \
  	aurora-over-iceland.png \
  	lady-musgrave-blue.png \
  	paisaje.jpg \
  	lapis.jpg \
  	corn.jpg \
  	dandelion.jpg


EXTRA_DIST = $(background_DATA)

metadatadir = $(datadir)/gnome-background-properties
metadata_DATA = \
	fedora-workstation-backgrounds.xml
